# TGseslibot

./: .replit  Dockerfile  pyproject.toml
config/: sample_config.py
