[tool.poetry]
name = "tgseslibot"
version = "0.1.0"
description = ""
authors = ["iibrahimwt13 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^3.11.3"
pyrogram = "^1.2.9"
youtube-dl = "^2021.4.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
